[package]
name = "archarchive"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
inquire = "0.7.5"
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = { version = "1.45.0", features = ["full"] }

[workspace.package.release]
opt-level = "z"
lto = "fat"
debug = true
codegen-units = 1
panic = 'abort'
strip = true
debug-assertions = false
overflow-checks = false
